--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "dependencies": {
         "54-grupe-final": "file:..",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "react-router": "^7.6.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.25.0",
