--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "helmet": "^8.1.0",
+        "multer": "^2.0.1",
         "mysql2": "^3.14.1"
     }
 }
